# bevy-snake

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: android.yml  web.yml
android/: AndroidManifest.xml
src/: lib.rs  main.rs
